docs(spindle-ui): import css

--- a/packages/spindle-ui/src/BottomButton/BottomButton.stories.mdx
+++ b/packages/spindle-ui/src/BottomButton/BottomButton.stories.mdx
@@ -8,7 +8,10 @@ import { BottomButton } from './BottomButton';
 
 <Source
   language='javascript'
-  code={`import { BottomButton } from '@openameba/spindle-ui'`}
+  code={`
+import { BottomButton } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/BottomButton/BottomButton.css';
+  `}
 />
 
 <Source
