--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
@@ -9,7 +9,10 @@ import { BreadcrumbItem } from './BreadcrumbItem';
 
 <Source
   language='javascript'
-  code={`import { BreadcrumbList } from '@openameba/spindle-ui'`}
+  code={`
+import { BreadcrumbList } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/Breadcrumb/Breadcrumb.css';
+  `}
 />
 
 <Source
