--- a/packages/spindle-ui/src/Button/Button.stories.mdx
+++ b/packages/spindle-ui/src/Button/Button.stories.mdx
@@ -12,7 +12,10 @@ import ChevronDownBold from '../Icon/ChevronDownBold';
 
 <Source
   language='javascript'
-  code={`import { Button } from '@openameba/spindle-ui'`}
+  code={`
+import { Button } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/Button/Button.css';
+  `}
 />
 
 <Source
