--- a/packages/spindle-ui/src/ButtonGroup/ButtonGroup.stories.mdx
+++ b/packages/spindle-ui/src/ButtonGroup/ButtonGroup.stories.mdx
@@ -9,7 +9,10 @@ import { SubtleButton } from '../SubtleButton';
 
 <Source
   language='javascript'
-  code={`import { ButtonGroup } from '@openameba/spindle-ui'`}
+  code={`
+import { ButtonGroup } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/ButtonGroup/ButtonGroup.css';
+  `}
 />
 
 <Source
