--- a/packages/spindle-ui/src/Dialog/Dialog.stories.mdx
+++ b/packages/spindle-ui/src/Dialog/Dialog.stories.mdx
@@ -8,7 +8,10 @@ import { DialogExample, StyleOnly, ButtonRow, ButtonColumn, ButtonColumnWithSubt
 
 <Source
   language='javascript'
-  code={`import { Dialog } from '@openameba/spindle-ui'`}
+  code={`
+import { Dialog } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/Dialog/Dialog.css';
+  `}
 />
 
 <Source
