--- a/packages/spindle-ui/src/DropdownMenu/DropdownMenu.stories.mdx
+++ b/packages/spindle-ui/src/DropdownMenu/DropdownMenu.stories.mdx
@@ -14,7 +14,10 @@ import {
 
 <Source
   language='javascript'
-  code={`import { DropdownMenu } from '@openameba/spindle-ui'`}
+  code={`
+import { DropdownMenu } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/DropdownMenu/DropdownMenu.css';
+  `}
 />
 
 <Source
