--- a/packages/spindle-ui/src/Form/ButtonSwitch/ButtonSwitch.stories.mdx
+++ b/packages/spindle-ui/src/Form/ButtonSwitch/ButtonSwitch.stories.mdx
@@ -16,7 +16,10 @@ import { ButtonSwitchExample } from './ButtonSwitch.stories.example';
 
 <Source
   language="javascript"
-  code={`import { ButtonSwitch } from '@openameba/spindle-ui'`}
+  code={`
+import { ButtonSwitch } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/ButtonSwitch/ButtonSwitch.css';
+  `}
 />
 
 <Source
