--- a/packages/spindle-ui/src/Form/Checkbox.stories.mdx
+++ b/packages/spindle-ui/src/Form/Checkbox.stories.mdx
@@ -8,7 +8,10 @@ import { Checkbox } from './Checkbox';
 
 <Source
   language='javascript'
-  code={`import { Checkbox } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { Checkbox } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/Checkbox.css';
+  `}
 />
 
 <Source
