--- a/packages/spindle-ui/src/Form/DropDown.stories.mdx
+++ b/packages/spindle-ui/src/Form/DropDown.stories.mdx
@@ -8,7 +8,10 @@ import { DropDown } from './DropDown';
 
 <Source
   language='javascript'
-  code={`import { DropDown } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { DropDown } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/DropDown.css';
+  `}
 />
 
 <Source
