--- a/packages/spindle-ui/src/Form/InlineDropDown.stories.mdx
+++ b/packages/spindle-ui/src/Form/InlineDropDown.stories.mdx
@@ -11,7 +11,10 @@ InlineDropDownは試験的なコンポーネントであるため、破壊的な
 
 <Source
   language="javascript"
-  code={`import { InlineDropDown } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { InlineDropDown } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/InlineDropDown.css';
+  `}
 />
 
 <Source
