--- a/packages/spindle-ui/src/Form/InputLabel.stories.mdx
+++ b/packages/spindle-ui/src/Form/InputLabel.stories.mdx
@@ -7,7 +7,10 @@ import { InputLabel } from './InputLabel';
 
 <Source
   language='javascript'
-  code={`import { InputLabel } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { InputLabel } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/InputLabel.css';
+  `}
 />
 
 <Source
