--- a/packages/spindle-ui/src/Form/Radio.stories.mdx
+++ b/packages/spindle-ui/src/Form/Radio.stories.mdx
@@ -8,7 +8,10 @@ import { Radio } from './Radio';
 
 <Source
   language='javascript'
-  code={`import { Radio } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { Radio } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/Radio.css';
+  `}
 />
 
 <Source
