--- a/packages/spindle-ui/src/Form/TextArea.stories.mdx
+++ b/packages/spindle-ui/src/Form/TextArea.stories.mdx
@@ -8,7 +8,10 @@ import { TextArea } from './TextArea';
 
 <Source
   language='javascript'
-  code={`import { TextArea } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { TextArea } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/TextArea.css';
+  `}
 />
 
 <Source
