--- a/packages/spindle-ui/src/Form/TextField.stories.mdx
+++ b/packages/spindle-ui/src/Form/TextField.stories.mdx
@@ -8,7 +8,10 @@ import { TextField } from './TextField';
 
 <Source
   language='javascript'
-  code={`import { TextField } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { TextField } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/TextField.css';
+  `}
 />
 
 <Source
