--- a/packages/spindle-ui/src/Form/ToggleSwitch.stories.mdx
+++ b/packages/spindle-ui/src/Form/ToggleSwitch.stories.mdx
@@ -8,7 +8,10 @@ import { ToggleSwitch } from './ToggleSwitch';
 
 <Source
   language='javascript'
-  code={`import { ToggleSwitch } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { ToggleSwitch } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/ToggleSwitch.css';
+  `}
 />
 
 <Source
