--- a/packages/spindle-ui/src/IconButton/IconButton.stories.mdx
+++ b/packages/spindle-ui/src/IconButton/IconButton.stories.mdx
@@ -12,7 +12,10 @@ import PlusBold from '../Icon/PlusBold';
 
 <Source
   language='javascript'
-  code={`import { IconButton } from '@openameba/spindle-ui'`}
+  code={`
+import { IconButton } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/IconButton/IconButton.css';
+  `}
 />
 
 <Source
