--- a/packages/spindle-ui/src/LinkButton/LinkButton.stories.mdx
+++ b/packages/spindle-ui/src/LinkButton/LinkButton.stories.mdx
@@ -16,7 +16,10 @@ import ChevronDownBold from '../Icon/ChevronDownBold';
 
 <Source
   language='javascript'
-  code={`import { LinkButton } from '@openameba/spindle-ui'`}
+  code={`
+import { LinkButton } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/LinkButton/LinkButton.css';
+  `}
 />
 
 <Source
