--- a/packages/spindle-ui/src/List/MoreLink.stories.mdx
+++ b/packages/spindle-ui/src/List/MoreLink.stories.mdx
@@ -8,7 +8,10 @@ import { MoreLink } from './MoreLink';
 
 <Source
   language='javascript'
-  code={`import { MoreLink } from '@openameba/spindle-ui/List'`}
+  code={`
+import { MoreLink } from '@openameba/spindle-ui/List';
+import '@openameba/spindle-ui/List/MoreLink.css';
+  `}
 />
 
 <Source
