--- a/packages/spindle-ui/src/Modal/AppealModal.stories.mdx
+++ b/packages/spindle-ui/src/Modal/AppealModal.stories.mdx
@@ -8,7 +8,10 @@ import { AppealModalExample, StyleOnly, StyleOnlyMedium, StyleOnlySmall, StyleOn
 
 <Source
   language='javascript'
-  code={`import { AppealModal } from '@openameba/spindle-ui/Modal'`}
+  code={`
+import { AppealModal } from '@openameba/spindle-ui/Modal';
+import '@openameba/spindle-ui/Modal/AppealModal.css';
+  `}
 />
 
 <Source
