--- a/packages/spindle-ui/src/Modal/SemiModal.stories.mdx
+++ b/packages/spindle-ui/src/Modal/SemiModal.stories.mdx
@@ -8,7 +8,10 @@ import { PopupModalExample, SheetModalExample, StyleOnlyPopupSmall, StyleOnlyPop
 
 <Source
   language='javascript'
-  code={`import { SemiModal } from '@openameba/spindle-ui/Modal'`}
+  code={`
+import { SemiModal } from '@openameba/spindle-ui/Modal';
+import '@openameba/spindle-ui/Modal/SemiModal.css';
+  `}
 />
 
 <Source
