--- a/packages/spindle-ui/src/NavigationTab/UnderlineTab/UnderlineTab.stories.mdx
+++ b/packages/spindle-ui/src/NavigationTab/UnderlineTab/UnderlineTab.stories.mdx
@@ -11,7 +11,10 @@ import { actions } from '@storybook/addon-actions';
 
 <Source
   language="javascript"
-  code={`import { UnderlineTab } from '@openameba/spindle-ui'`}
+  code={`
+import { UnderlineTab } from '@openameba/spindle-ui/NavigationTab';
+import '@openameba/spindle-ui/NavigationTab/UnderlineTab/UnderlineTab.css';
+  `}
 />
 
 <Source
