--- a/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
+++ b/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
@@ -8,7 +8,10 @@ import { Pagination } from './Pagination';
 
 <Source
   language="javascript"
-  code={`import { Pagination } from '@openameba/spindle-ui'`}
+  code={`
+import { Pagination } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/Pagination.css';
+  `}
 />
 
 <Source
