--- a/packages/spindle-ui/src/SegmentedControl/SegmentedControl.stories.mdx
+++ b/packages/spindle-ui/src/SegmentedControl/SegmentedControl.stories.mdx
@@ -16,7 +16,10 @@ import { actions } from '@storybook/addon-actions';
 
 <Source
   language="javascript"
-  code={`import { SegmentedControl } from '@openameba/spindle-ui'`}
+  code={`
+import { SegmentedControl } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/SegmentedControl/SegmentedControl.css';
+  `}
 />
 
 <Source
