--- a/packages/spindle-ui/src/SubtleButton/SubtleButton.stories.mdx
+++ b/packages/spindle-ui/src/SubtleButton/SubtleButton.stories.mdx
@@ -8,7 +8,10 @@ import { SubtleButton } from './SubtleButton';
 
 <Source
   language='javascript'
-  code={`import { SubtleButton } from '@openameba/spindle-ui'`}
+  code={`
+import { SubtleButton } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/SubtleButton/SubtleButton.css';
+  `}
 />
 
 <Source
