--- a/packages/spindle-ui/src/TextButton/TextButton.stories.mdx
+++ b/packages/spindle-ui/src/TextButton/TextButton.stories.mdx
@@ -11,7 +11,10 @@ import PencilAdd from '../Icon/PencilAdd';
 
 <Source
   language='javascript'
-  code={`import { TextButton } from '@openameba/spindle-ui'`}
+  code={`
+import { TextButton } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/TextButton/TextButton.css';
+  `}
 />
 
 <Source
