--- a/packages/spindle-ui/src/TextLink/TextLink.stories.mdx
+++ b/packages/spindle-ui/src/TextLink/TextLink.stories.mdx
@@ -11,7 +11,10 @@ import PencilAdd from '../Icon/PencilAdd';
 
 <Source
   language='javascript'
-  code={`import { TextLink } from '@openameba/spindle-ui'`}
+  code={`
+import { TextLink } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/TextLink/TextLink.css';
+  `}
 />
 
 <Source
