--- a/packages/spindle-ui/src/Form/InvalidMessage.stories.mdx
+++ b/packages/spindle-ui/src/Form/InvalidMessage.stories.mdx
@@ -7,7 +7,10 @@ import { InvalidMessage } from './InvalidMessage';
 
 <Source
   language='javascript'
-  code={`import { InvalidMessage } from '@openameba/spindle-ui/Form'`}
+  code={`
+import { InvalidMessage } from '@openameba/spindle-ui/Form';
+import '@openameba/spindle-ui/Form/InvalidMessage.css';
+  `}
 />
 
 <Source
