--- a/packages/spindle-ui/src/HeroCarousel/HeroCarousel.stories.mdx
+++ b/packages/spindle-ui/src/HeroCarousel/HeroCarousel.stories.mdx
@@ -41,7 +41,10 @@ export const carouselList =[
 
 <Source
   language="javascript"
-  code={`import { HeroCarousel } from '@openameba/spindle-ui'`}
+  code={`
+import { HeroCarousel } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/HeroCarousel/HeroCarousel.css';
+  `}
 />
 
 <Source
