--- a/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
+++ b/packages/spindle-ui/src/InlineNotification/InlineNotification.stories.mdx
@@ -17,7 +17,10 @@ import UserNotificationTypes from '../../storybook/UserNotificationTypes.mdx';
 
 <Source
   language='javascript'
-  code={`import { InlineNotification } from '@openameba/spindle-ui'`}
+  code={`
+import { InlineNotification } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/InlineNotification/InlineNotification.css';
+  `}
 />
 
 <Source
