--- a/packages/spindle-ui/src/SnackBar/SnackBar.stories.mdx
+++ b/packages/spindle-ui/src/SnackBar/SnackBar.stories.mdx
@@ -122,7 +122,10 @@ SnackBarコンポーネントは、ユーザーの操作を邪魔しないよう
 
 <Source
   language="javascript"
-  code={`import { SnackBar } from '@openameba/spindle-ui'`}
+  code={`
+import { SnackBar } from '@openameba/spindle-ui';
+import '@openameba/spindle-ui/SnackBar/SnackBar.css';
+  `}
 />
 
 <Source
