docs(spindle-ui): import code

--- a/packages/spindle-ui/src/Icon/index.stories.mdx
+++ b/packages/spindle-ui/src/Icon/index.stories.mdx
@@ -5,6 +5,13 @@ import { Clock } from './index';
 
 <Meta title="Icon" component={Clock} />
 
+<Source
+  language='javascript'
+  code={`import ICON_NAME from '@openameba/spindle-ui/Icon/{ICON_NAME}'`}
+/>
+
+※ `ICON_NAME`はアイコンの名前です。利用したいアイコンの名前を指定してください。
+
 ## Clock Icon
 
 <Source
