docs(spindle-ui): import BreadcrumbItem with BreadcrumbList

--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
@@ -10,7 +10,7 @@ import { BreadcrumbItem } from './BreadcrumbItem';
 <Source
   language='javascript'
   code={`
-import { BreadcrumbList } from '@openameba/spindle-ui';
+import { BreadcrumbList, BreadcrumbItem } from '@openameba/spindle-ui';
 import '@openameba/spindle-ui/Breadcrumb/Breadcrumb.css';
   `}
 />
