refactor(spindle-ui): storyの微修正等

--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Breadcrumb/Breadcrumb.css';
 
 ## BreadcrumbList
 
-<Story of={BreadcrumbStories.BreadcrumbListStory} />
+<Story of={BreadcrumbStories.BreadcrumbList} />
 
 通常は`<BreadcrumbItem>`と一緒に使います。現在地のリンクには`current`を指定します。
 
