--- a/packages/spindle-ui/src/Dialog/Dialog.mdx
+++ b/packages/spindle-ui/src/Dialog/Dialog.mdx
@@ -76,7 +76,7 @@ function DialogExample() {
 
 [HTMLDialogElement](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDialogElement)を利用しない場合には、`<Dialog.StyleOnly>`を利用しSpindleで定義されたスタイルを流用できます。ダイアログの動作を独自で定義したい場合や他ライブラリの利用等でスタイルだけ使いたい場合を想定しています。
 
-<Story of={DialogStories.StyleOnlyStory} />
+<Story of={DialogStories.StyleOnly} />
 
 <Source
   code={`
@@ -110,7 +110,7 @@ function DialogExample() {
 
 `<Dialog.ButtonGroup>`を利用して、ボタンの並ぶ方向を横・縦に指定できます。ボタンは`<Button>`のmediumサイズを利用してください。
 
-<Story of={DialogStories.ButtonRowStory} />
+<Story of={DialogStories.ButtonRow} />
 
 <Source
   code={`
@@ -146,7 +146,7 @@ function DialogExample() {
   `}
 />
 
-<Story of={DialogStories.ButtonColumnStory} />
+<Story of={DialogStories.ButtonColumn} />
 
 <Source
   code={`
@@ -182,7 +182,7 @@ function DialogExample() {
   `}
 />
 
-<Story of={DialogStories.ButtonColumnWithSubtleButtonStory} />
+<Story of={DialogStories.ButtonColumnWithSubtleButton} />
 
 <Source
   code={`
