--- a/packages/spindle-ui/src/Form/Checkbox.mdx
+++ b/packages/spindle-ui/src/Form/Checkbox.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Form/Checkbox.css';
 
 ## Checkbox
 
-<Story of={CheckboxStories.CheckboxStory} />
+<Story of={CheckboxStories.Checkbox} />
 
 <Source
   code={`
