--- a/packages/spindle-ui/src/Form/InvalidMessage.mdx
+++ b/packages/spindle-ui/src/Form/InvalidMessage.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Form/InvalidMessage.css';
 
 ## Invalid Message
 
-<Story of={InvalidMessageStories.InvalidMessageStory} />
+<Story of={InvalidMessageStories.InvalidMessage} />
 
 <Source
   code={`
