--- a/packages/spindle-ui/src/SnackBar/SnackBar.mdx
+++ b/packages/spindle-ui/src/SnackBar/SnackBar.mdx
@@ -364,7 +364,7 @@ import '@openameba/spindle-ui/SnackBar/SnackBar.css';
 
 ## Custom button with icon
 
-<Story of={SnackBarStories.Custombuttonwithicon} />
+<Story of={SnackBarStories.CustomButtonWithIcon} />
 
 <Source
   code={`<SnackBar.Frame active={true}>
@@ -390,7 +390,7 @@ import '@openameba/spindle-ui/SnackBar/SnackBar.css';
 
 ## Custom link with information
 
-<Story of={SnackBarStories.Customlinkwithinformation} />
+<Story of={SnackBarStories.CustomLinkWithInformation} />
 
 <Source
   code={`<SnackBar.Frame active={true}>
@@ -413,7 +413,7 @@ import '@openameba/spindle-ui/SnackBar/SnackBar.css';
 
 ## Custom link with confirmation
 
-<Story of={SnackBarStories.Customlinkwithconfirmation} />
+<Story of={SnackBarStories.CustomLinkWithConfirmation} />
 
 <Source
   code={`<SnackBar.Frame active={true} variant="confirmation">
@@ -436,7 +436,7 @@ import '@openameba/spindle-ui/SnackBar/SnackBar.css';
 
 ## Custom link with error
 
-<Story of={SnackBarStories.Customlinkwitherror} />
+<Story of={SnackBarStories.CustomLinkWithError} />
 
 <Source
   code={`<SnackBar.Frame active={true} variant="error">
