--- a/packages/spindle-ui/src/Toast/Toast.mdx
+++ b/packages/spindle-ui/src/Toast/Toast.mdx
@@ -27,7 +27,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 ## Information
 
-<Story of={ToastStories.InformationToast} />
+<Story of={ToastStories.Information} />
 
 <Source
   code={`<Toast active={true} variant="information" icon={<Information />}>メッセージが届きました</Toast>`}
@@ -35,7 +35,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 ## Information without info icon
 
-<Story of={ToastStories.InformationWithoutInfoIconToast} />
+<Story of={ToastStories.InformationWithoutInfoIcon} />
 
 <Source
   code={`<Toast active={true} variant="information" hideInfoIcon>メッセージが届きました</Toast>`}
@@ -43,7 +43,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 ## Confirmation
 
-<Story of={ToastStories.ConfirmationToast} />
+<Story of={ToastStories.Confirmation} />
 
 <Source
   code={`<Toast active={true} variant="confirmation" icon={<CheckCircleFill />}>メッセージが届きました</Toast>`}
@@ -51,7 +51,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 ## Error
 
-<Story of={ToastStories.ErrorToast} />
+<Story of={ToastStories.Error} />
 
 <Source
   code={`<Toast active={true} variant="error" icon={<ExclamationmarkCircleFill />}>メッセージが届きました</Toast>`}
@@ -67,7 +67,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 ## Long Content
 
-<Story of={ToastStories.LongContentToast} />
+<Story of={ToastStories.LongContent} />
 
 <Source
   code={`<Toast active={true} icon={<Information />}>長いコンテンツは1行で切られるので注意が必要です。</Toast>`}
@@ -75,7 +75,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 ## Multiple
 
-<Story of={ToastStories.MultipleToast} />
+<Story of={ToastStories.Multiple} />
 
 <Source
   code={`<Toast active={true} offset={{ top: 30 }}>メッセージが届きました</Toast>
@@ -84,7 +84,7 @@ import '@openameba/spindle-ui/Toast/Toast.css';
 
 ## Multiple bottom
 
-<Story of={ToastStories.MultipleBottomToast} />
+<Story of={ToastStories.MultipleBottom} />
 
 <Source
   code={`<Toast active={true} offset={{ bottom: 30 }} position="bottomCenter">メッセージが届きました</Toast>
