--- a/packages/spindle-ui/src/Form/DropDown.mdx
+++ b/packages/spindle-ui/src/Form/DropDown.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Form/DropDown.css';
 
 ## DropDown
 
-<Story of={DropDownStories.DropDownStory} />
+<Story of={DropDownStories.DropDown} />
 
 <Source
   code={`
