--- a/packages/spindle-ui/src/Form/InputLabel.mdx
+++ b/packages/spindle-ui/src/Form/InputLabel.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Form/InputLabel.css';
 
 ## Input Label
 
-<Story of={InputLabelStories.InputLabelStory} />
+<Story of={InputLabelStories.InputLabel} />
 
 <Source
   code={`
