--- a/packages/spindle-ui/src/Form/Radio.mdx
+++ b/packages/spindle-ui/src/Form/Radio.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Form/Radio.css';
 
 ## Radio
 
-<Story of={RadioStories.RadioStory} />
+<Story of={RadioStories.Radio} />
 
 <Source
   code={`
