--- a/packages/spindle-ui/src/Form/TextArea.mdx
+++ b/packages/spindle-ui/src/Form/TextArea.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Form/TextArea.css';
 
 ## Text Area
 
-<Story of={TextAreaStories.TextAreaStory} />
+<Story of={TextAreaStories.TextArea} />
 
 <Source
   code={`
