--- a/packages/spindle-ui/src/Form/ToggleSwitch.mdx
+++ b/packages/spindle-ui/src/Form/ToggleSwitch.mdx
@@ -25,7 +25,7 @@ import '@openameba/spindle-ui/Form/ToggleSwitch.css';
 
 ## Toggle Switch
 
-<Story of={ToggleSwitchStories.ToggleSwitchStory} />
+<Story of={ToggleSwitchStories.ToggleSwitch} />
 
 <Source
   code={`
